--- a/src/Contact/YourContact/index.module.scss
+++ b/src/Contact/YourContact/index.module.scss
@@ -83,3 +83,10 @@
         bottom: 0;
     }
 }
+@media (max-width: 376px){
+    .wrapper{
+        width: 316px;
+        height: 422px;
+        margin-top: 56px;
+    }
+}
