--- a/src/Opening/index.module.scss
+++ b/src/Opening/index.module.scss
@@ -5,7 +5,6 @@
 .opening {
     height: 712px;
     margin-top: 130px;
-    position: relative;
     .content {
         width: 440px;
         height: 204px;
@@ -31,7 +30,32 @@
     }
     img {
         width: 100%;
-        position: absolute;
         height: 594px;
+    }
+}
+@media (max-width: 376px) {
+    .opening {
+        margin-top: 100px;
+        height: 480px;
+        .content {
+            width: 310px;
+            h1 {
+                font-size: 35px;
+                line-height: 41px;
+            }
+            p{
+                margin-bottom: 28px;
+                padding: 0 20px;
+            }
+            a{
+               padding: 22px 90px;
+            }
+        }
+        img{
+            margin-top: 51px;
+            height: 267px;
+            object-fit: cover;
+            object-position: center top;
+        }
     }
 }
