--- a/src/AttractingInfo/OneAttract/TextContent/index.module.scss
+++ b/src/AttractingInfo/OneAttract/TextContent/index.module.scss
@@ -44,11 +44,54 @@
     width: 623px;
     padding: 70px 35px;
     margin-right: 60px;
-    padding-left: 35px;
     background-color: $color-white;
     &::after {
         background-color: $color-green;
         left: 35px;
         bottom: 70px;
+    }
+}
+@media (max-width: 376px){
+    .wrapper{
+        width: 272px;
+        height: 191px;
+        margin-right: unset;
+        margin-left: unset;
+        h2{
+            font-size: 30px;
+            line-height: 35px;
+            margin-top: 25px;
+        }
+        p{
+            font-size: 14px;
+            line-height: 19px;
+        }
+        &:after{
+            content: none;
+        }
+    }
+    .mcBook {
+        h2{
+            height: 72px;
+        }
+        p{
+            margin: 10px 0 30px 0;
+        }
+    }
+    .phone{
+        p{
+            margin: 18px 0 25px 0;
+        }
+    }
+    .spread{
+        height: 220px;
+        padding: unset;
+        h2{
+            margin-top: 35px;
+            margin-bottom: 25px;
+        }
+        p{
+            padding-right: 40px;
+        }
     }
 }
