--- a/src/AttractingInfo/OneAttract/index.module.scss
+++ b/src/AttractingInfo/OneAttract/index.module.scss
@@ -64,3 +64,55 @@
         }
     }
 }
+@media (max-width: 376px){
+    .container {
+        &:nth-child(even), &{
+            flex-direction: column-reverse;
+        }
+        width: 315px;
+        margin-top: 42px;
+        &:nth-child(3){
+            flex-direction: column;
+            justify-content: space-between;
+            background-color: $color-white;
+            height: 486px;
+            margin-bottom: 45px;
+        }
+        &:nth-child(1) {
+            justify-content: flex-end;
+        }
+        .mcBook {
+            width: 216px;
+            height: 147px;
+            margin: 0 43px 0 56px;
+            &:after{
+                width: 93px;
+                height: 93px;
+                top: 20px;
+                right: 20px;
+            }
+            img{
+                width: 193px;
+                height: 110px;
+            }
+        }
+        .phone{
+            width: 132px;
+            height: 132px;
+            margin-top: 12px;
+            img{
+                width: 175px;
+                height: 135px;
+                top: 7px;
+            }
+        }
+        .spread{
+            width: 100%;
+            height: 195px;
+            img{
+                bottom: -37px;
+                left: -13px;
+            }
+        }
+    }
+}
