--- a/src/Pricing/Version/WhaIGet/index.module.scss
+++ b/src/Pricing/Version/WhaIGet/index.module.scss
@@ -52,3 +52,13 @@
 .premium {
     margin-top: 47px;
 }
+@media (max-width: 376px){
+    .wrapper{
+        margin: unset;
+        margin-left: 21px;
+        li{
+            display: block;
+            text-align: left;
+        }
+    }
+}
