--- a/src/AttractingInfo/OneAttract/TextContent/index.module.scss
+++ b/src/AttractingInfo/OneAttract/TextContent/index.module.scss
@@ -51,7 +51,7 @@
         bottom: 70px;
     }
 }
-@media (max-width: 376px){
+@media (max-width: 750px){
     .wrapper{
         width: 272px;
         height: 191px;
@@ -92,6 +92,29 @@
         }
         p{
             padding-right: 40px;
+        }
+    }
+}
+@media (min-width: 750px) and (max-width: 1100px){
+    .wrapper{
+        &::after {
+            width: 250px;
+        }
+    }
+    .mcBook{
+        margin-right: 0;
+        width: 316px;
+    }
+    .phone{
+        margin-left: 60px;
+        width: 316px;
+    }
+    .spread{
+        margin-right: 0;
+        padding: 70px 0;
+        width: 500px;
+        &::after{
+            left: 0;
         }
     }
 }
