--- a/src/AttractingInfo/OneAttract/index.module.scss
+++ b/src/AttractingInfo/OneAttract/index.module.scss
@@ -64,7 +64,7 @@
         }
     }
 }
-@media (max-width: 376px){
+@media (max-width: 750px){
     .container {
         &:nth-child(even), &{
             flex-direction: column-reverse;
@@ -115,4 +115,19 @@
             }
         }
     }
+}
+@media (min-width: 750px) and (max-width: 1100px) {
+ .container{
+     width: 700px;
+     .spread{
+         img{
+             left: 0;
+         }
+     }
+ }
+}
+@media (min-width: 1100px) and (max-width: 1399px){
+  .container{
+      width: 1050px;
+  }
 }
