--- a/src/Contact/index.module.scss
+++ b/src/Contact/index.module.scss
@@ -7,13 +7,20 @@
         justify-content: space-between;
     }
 }
-@media (max-width: 376px) {
+@media (max-width: 750px) {
     .wrapper {
         margin-top: 0;
         .containerWrapper{
             width: 316px;
             height: 651px;
             flex-direction: column;
+        }
+    }
+}
+@media (min-width: 750px) and (max-width: 1100px) {
+    .wrapper{
+        .containerWrapper{
+            width: 700px;
         }
     }
 }
