--- a/src/Pricing/index.module.scss
+++ b/src/Pricing/index.module.scss
@@ -17,7 +17,7 @@
         }
     }
 }
-@media (max-width: 376px){
+@media (max-width: 750px){
     .wrapper{
         height: 967px;
         margin-top: 53px;
@@ -32,6 +32,20 @@
                 flex-direction: column;
                 height: 887px;
             }
+        }
+    }
+}
+@media (min-width: 750px) and (max-width: 1100px){
+    .wrapper{
+        .container{
+            width: 700px;
+        }
+    }
+}
+ @media (min-width: 1100px) and (max-width: 1400px){
+    .wrapper{
+        .container{
+            width: 1050px;
         }
     }
 }
