--- a/src/Statistics/index.module.scss
+++ b/src/Statistics/index.module.scss
@@ -14,11 +14,12 @@
     .wrapperData {
         display: flex;
         width: 823px;
+        margin: 0 auto;
         justify-content: space-between;
     }
 }
 
-@media (max-width: 376px) {
+@media (max-width: 750px) {
     .wrapper {
         height: 762px;
         h2 {
@@ -32,6 +33,13 @@
             align-items: center;
             width: 100%;
             margin-bottom: 25px;
+        }
+    }
+}
+@media (min-width: 750px) and (max-width: 1100px) {
+    .wrapper {
+        .wrapperData{
+            width: 700px;
         }
     }
 }
