--- a/src/general-scss/_general.scss
+++ b/src/general-scss/_general.scss
@@ -5,10 +5,24 @@
     width: 1352px;
     margin: 0 auto;
 }
-
-@media (max-width: 376px) {
+@media (max-width: 550px) {
     .container {
         width: 327px;
+    }
+}
+@media (min-width: 550px) and (max-width: 750px){
+    .container{
+        width: 540px;
+    }
+}
+@media (min-width: 750px) and (max-width: 1100px){
+    .container{
+        width: 700px;
+    }
+}
+@media (min-width: 1100px) and (max-width: 1400px){
+    .container{
+        width: 1050px;
     }
 }
 
